# nephos

./: CMakeLists.txt  README.md  macosbuild.sh  rapibuild.sh
Common/: xap_breakpoint_envelope.h  xap_utils.h
src/: easing.h  generatesteps.js  grainfx.cpp  grainfx.h  grainoscillators.h  granularsynth.h  js_impl.cpp  macroknobs.json  nephosmain.cpp  xen_modulationsources.h  xgfx_pingpongdelay.h
src/juceplugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  dashboardcomponent.cpp  dashboardcomponent.h  dropdowncomponent.h  modulecomponents.cpp  modulecomponents.h  xap_slider.cpp  xap_slider.h
